update delete production helm release func
