# pkg/microservice/aslan/server/rest/doc/swagger.json
@@ -778,13 +778,11 @@
                         "required": true
                     },
                     {
-                        "description": "body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handler.DeleteProductHelmReleaseRequest"
-                        }
+                        "type": "string",
+                        "description": "release names",
+                        "name": "releaseNames",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -2120,17 +2118,6 @@
                 },
                 "value": {
                     "type": "string"
-                }
-            }
-        },
-        "handler.DeleteProductHelmReleaseRequest": {
-            "type": "object",
-            "properties": {
-                "release_names": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
                 }
             }
         },
